# ponderada-pipe

./: .gitignore  README.md  pyproject.toml
.github/workflows/: eventops-ci.yml
data/: sample_schedule.json
entregaveis/: README.md  RELATORIO.md
entregaveis/dados/: pipeline_metrics.csv  workflow_runs.json
eventops/: __init__.py  __main__.py  cli.py  conflicts.py  experiment.py  io.py  models.py  report.py  rooms.py  scheduler.py
experiment/: cache_salt.txt  scenario.json  scenarios.json
scripts/: collect_metrics.py  generate_charts.py  prepare_experiment.py
tests/: test_cli.py  test_conflicts.py  test_experiment_scenario.py  test_load.py  test_scheduler.py
